--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body{
     padding: 0rem;
     margin: 0rem;
     /*background-image: linear-gradient(-45deg, #252d48 10%, #303e6a 50%, #27323d 100%);  */
-    background: linear-gradient(-45deg, #252d48 10%, #303e6a 50%, #27323d 100%); 
+    /*background: linear-gradient(-45deg, #252d48 10%, #303e6a 50%, #27323d 100%); */
+    background-color: (29, 29, 31);
   
     font-family: Lucida Console, monospace; /*You can change the font here*/
 
