--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     margin: 0rem;
     /*background-image: linear-gradient(-45deg, #252d48 10%, #303e6a 50%, #27323d 100%);  */
     /*background: linear-gradient(-45deg, #252d48 10%, #303e6a 50%, #27323d 100%); */
-    background: linear-gradient(-45deg, #000000 10%, #352e6a 50%, #000000 100%); */
+    background: linear-gradient(-45deg, #000000 10%, #352e6a 50%, #000000 100%); 
   
     font-family: Lucida Console, monospace; /*You can change the font here*/
 
